--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       },
       {
         id: 6,
-        name: "Budget Home",
+        name: "Surya PG",
         location: "Old City, Ahmedabad",
         price: 1500,
         rating: 3.9,
@@ -513,7 +513,7 @@
       },
       {
         id: 8,
-        name: "Budget Home",
+        name: "Spenta PGs",
         location: "Old City, Ahmedabad",
         price: 1500,
         rating: 3.9,
@@ -526,8 +526,8 @@
       },
       {
         id: 9,
-        name: "Budget Home",
-        location: "Old City, Ahmedabad",
+        name: "Sunrise PGs",
+        location: "Raipur , Ahmedabad",
         price: 1500,
         rating: 3.9,
         facilities: ["Fan", "Common Lounge", "Parking(Bike)", "Daily Cleaning", "Bed", "Mattress", "Pillow", "Cupboard", "RO"],
@@ -539,8 +539,8 @@
       },
       {
         id: 10,
-        name: "Budget Home",
-        location: "Old City, Ahmedabad",
+        name: "Angle PGs",
+        location: "Chandlodiya, Ahmedabad",
         price: 1500,
         rating: 3.9,
         facilities: ["Fan", "Common Lounge", "Parking(Bike)", "Daily Cleaning", "Bed", "Mattress", "Pillow", "Cupboard", "RO"],
