--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       {
         id: 5,
         name: "Home PG",
-        location: "Sinfhubhavan, Ahmedabad",
+        location: "Sinhubhavan, Ahmedabad",
         price: 7000,
         rating: 4.4,
         facilities: ["WiFi", "Laundry", "Refrigerator", "Study Room", "Parking(Bike)", "CCTV", "Biometric", "24x7 Guard", "Daily Cleaning", "Bed", "Mattress", "Pillow", "Cupboard", "Study Table", "AC", "Geyser", "RO"],
@@ -483,7 +483,7 @@
         rooms: { Single: 7000, Double: 3500, Triple: 2200 },
         washroom: "Attached",
         ac: true,
-        images: ["1.jpg", "2.jpg"]
+        images: ["https://static.wixstatic.com/media/489126_53b3663b95b248139b491df4348331e8~mv2.jpg/v1/crop/x_134,y_0,w_1495,h_1332/fill/w_280,h_248,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Studio_edited.jpg", "https://housing-images.n7net.in/01c16c28/5a77e5af280764182350750d9ad947a7/v0/medium/3_rk_-for-rent-shivajinagar-Pune-bedroom.jpg"]
       },
       {
         id: 6,
